# fastapi-demo

./: .bandit  .env.development  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  ENHANCEMENTS.md  README.md  TESTING_GUIDE.md  prompt.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  main.py
app/api/routes/: advanced.py  advanced_parameters.py  advanced_security.py  crud.py  file_uploads.py  health.py
app/core/: config.py  logging.py  security.py
app/db/: memory.py
app/middleware/: resilience.py  security_headers.py
app/schemas/: models.py
app/services/: cache.py
app/utils/: concurrency.py  data_processing.py
deployment/: DEPLOYMENT.md
deployment/aws/: cloudformation-template.yaml  ecs-task-definition.json
deployment/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  nginx.conf
deployment/kubernetes/: deployment.yaml  ingress.yaml
docs/: Architecture.md  Guidelines.md
postman/: FastAPI-Guide.postman_collection.json
scripts/: generate_keys.py
test_data/: products.json  users.json
tests/: conftest.py
tests/integration/: test_advanced.py  test_health.py
tests/unit/: test_cache.py  test_concurrency.py  test_crud.py  test_database.py  test_schemas.py
